--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
 	<nav>
 		<ul>
 			<li><a href="index.html">HOME</a></li>
-			<li><a href="store.html">STORE</a></li>	
+			<li>
+				<a href="#">STORE</a>
+				<ul>
+					<li><a href="livingroom.html">Living Room</a></li>
+					<li><a href="bedroom.html">Bed Room</a></li>
+					<li><a href="kitchen.html">Kitchen</a></li>
+					<li><a href="garden.html">Garden</a></li>
+					<li><a href="diningroom.html">Dining Room</a></li>
+				</ul>
+			</li>	
 			<li><a href="accessories.html">ACCESSORIES</a></li>
 			<li><a href="brand.html">BRAND</a></li>
 			<li><a href="pages.html">PAGES</a></li>
